[project]
name = "tempestwx"
version = "0.1.0"
description = ""
keywords = [ "tempest", "weather", "api" ]
license = { text = "MIT" }
authors = [
    {name = "Grant Gaudet",email = "grant@greylabel.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
]

[project.urls]
repository = "https://github.com/greylabel/tempestwx"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pylint = "^3.3.4"
types-requests-oauthlib = "^2.0.0.20250306"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
